# Farsight

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTERS.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  __init__.py  config.py  main.py  pyproject.toml  report.md  requirements-dev.txt  requirements-screenshot.txt  requirements-web.txt  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy-pages.yml  publish-pypi.yml
cli/: scan.py
docs/: DEMO_RUNBOOK.md
docs/superpowers/plans/: 2026-07-09-defcon34-site.md
docs/superpowers/specs/: 2026-07-09-defcon34-site-design.md
farsight/: __init__.py  __main__.py  config.py  main.py
farsight/cli/: scan.py  web.py
farsight/modules/: api_fuzzer.py  attack_surface.py  news.py  org_discovery.py  recon.py  report_writer.py  threat_intel.py  typosquat.py
farsight/utils/: api_handler.py  cloud_ranges.py  common.py  display.py  dns.py  intelx_cache.py  masscan.py  subdomain_enum.py
farsight/web/: __init__.py  app.py  events.py  orchestrator.py  replay.py  scan_manager.py  screenshot.py
farsight/web/fixtures/: demo_scan_example.com.json
farsight/web/static/: index.html
farsight/web/static/css/: style.css
farsight/web/static/js/: app.js  graph.js
modules/: news.py  recon.py  report_writer.py  typosquat.py
reports/example.com/: test_scan.md
reports/nmap.org/: scan.md
scripts/: capture_demo_fixture.py  record_demo.sh
site/: astro.config.mjs  package-lock.json  package.json
site/public/: CNAME
site/public/assets/docs/casts/: scan-basic.cast  scan-help.cast  web-startup.cast
site/src/: content.config.ts
site/src/components/: Architecture.astro  ConferenceSection.astro  DemoSection.astro  FeatureGrid.astro  Footer.astro  Header.astro  Hero.astro  InstallBlock.astro  Roadmap.astro  SpeakerSection.astro  StatsStrip.astro
site/src/content/docs/: architecture.md  cli-reference.md  configuration.md  faq.md  getting-started.md  module-attack-surface.md  module-news.md  module-org-discovery.md  module-recon.md  module-threat-intel.md  module-typosquat.md  reports.md  web-ui.md
site/src/layouts/: BaseLayout.astro  DocsLayout.astro
site/src/pages/: index.astro
site/src/pages/docs/: [...slug].astro  index.astro
site/src/styles/: global.css
tests/: conftest.py  test_cloud_ranges.py  test_common.py  test_config.py  test_masscan.py  test_org_discovery.py  test_recon.py  test_report_writer.py  test_threat_intel.py  test_typosquat.py  test_web_app_screenshot.py  test_web_orchestrator.py  test_web_replay.py  test_web_scan_manager.py  test_web_screenshot.py
utils/: api_handler.py  common.py  dns.py
