[tool.poetry]
name = "farsight"
version = "0.1.0"
description = "CLI-Based Recon and Threat Intelligence Framework"
authors = ["FARSIGHT Team <contact@farsight-security.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "farsight"}]
homepage = "https://github.com/seedon198/Farsight"
repository = "https://github.com/seedon198/Farsight"
documentation = "https://github.com/seedon198/Farsight#readme"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = "^0.16.0"
python-whois = "^0.7.3"
aiohttp = "^3.14.1"
dnspython = ">=2.6.1"
beautifulsoup4 = "^4.11.1"
# Enhanced typosquatting detection
dnstwist = "^20250130"
# News article retrieval
gnews = "^0.4.1"
# PDF report generation
markdown = "^3.3.7"
# We'll use reportlab instead of weasyprint as it's more compatible
reportlab = "^4.0.4"
rapidfuzz = "^3.13.0"
aiodns = "^3.4.0"
requests = "^2.33.0"
# Pinned floors to satisfy security advisories for transitive deps
urllib3 = ">=2.7.0"
idna = ">=3.15"
pillow = ">=12.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.4.0"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
black = "^26.3.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[tool.poetry.group.web]
optional = true

[tool.poetry.group.web.dependencies]
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[tool.poetry.scripts]
farsight = "farsight.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
